<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:text="@string/video_uploaden"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:background="@drawable/public_important_background_white_round"

            android:id="@+id/upload_btn_custom" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:id="@+id/type_spinner_custom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:hint="@string/info_ber_dein_video"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/info_edit_custom" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/public_important_background_white_round"
            android:id="@+id/post_btn_custom"
            android:text="@string/poste_diese_session" />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>