<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_profile_d"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:background="@drawable/public_background_white_round_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/public_button_grey"
            android:text="@string/email_aendern" />
        <EditText
            android:id="@+id/email_profile_email_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:visibility="gone" />
        <EditText
            android:id="@+id/email_new_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/alte_email"
            android:inputType="textEmailAddress"
            android:visibility="gone" />

        <EditText
            android:id="@+id/pwd_edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/passwort"
            android:inputType="textPassword"
            android:visibility="gone" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>