<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/title_qustion2"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/app_name"
                android:textSize="36sp"
                />
            <TextView
                android:id="@+id/title_qustion_info"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:text="Mind answering some questions?"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                 />


        </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"



                android:orientation="vertical"
                >

                <AutoCompleteTextView
                    android:id="@+id/edit_grade_extra"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/grade_v_scale_ex_v13"
                    android:inputType="text"
                    android:maxLength="4"
                    android:layout_weight="1"/>



                <AutoCompleteTextView
                    android:gravity="center"

                    android:id="@+id/edit_country_extra"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"

                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"


                    android:hint="@string/country_ex_deutschland"
                    android:inputType="text"
                    android:maxLength="15"
                    android:layout_weight="1" />

                <AutoCompleteTextView
                    android:gravity="center"

                    android:id="@+id/edit_age_extra"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"


                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1" />

                <AutoCompleteTextView
                    android:id="@+id/edit_height_extra"
                    android:layout_width="match_parent"


                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/height_in_cm"

                    android:inputType="number"
                    android:maxLength="4" />

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/terms_conditions_txt_extra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="Terms and Conditions"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"


                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@drawable/public_button_grey"
                android:text="Continue"
                android:textColor="#fff"
                />

        </LinearLayout>


    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>