<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:elevation="10dp"

    android:layout_margin="10dp"

    android:background="@drawable/public_background_white_round_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_profile_image_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="2.5"
            android:src="@mipmap/plus" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_weight="0.8">


            <TextView
                android:id="@+id/name_txt_profile_custom"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/name_creator"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/grade_txt_profile_custom"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="Grade"
                android:textAlignment="center"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/country_txt_profile_custom"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="Berlin"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/info_txt_profile_custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="info"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/height_txt_profile_custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="Height"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/number_followers_profile_custom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/follower_x"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner_followers_profile_custom"


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/number_following_profile_custom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/following_x"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner_following_profile_custom"


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1" />



            </LinearLayout>











        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>